Fixed navbar and added gemfile

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,9 @@
 
   <main class="page-content" aria-label="Content">
     <div class="wrapper">
-      {{ content }}
+      <div class="content-inner">
+        {{ content }}
+      </div>
     </div>
   </main>
 
