--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,7 @@
                 <a class="dropdown-link dropdown-overview" href="{{ '/#tech-stack' | relative_url }}">Full overview</a>
               </div>
             </div>
+            <a class="page-link" href="{{ '/#getting-started' | relative_url }}">Getting Started</a>
             <a class="page-link" href="https://github.com/HelloAllyTech" target="_blank">GitHub</a>
           </div>
       </nav>
