--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,26 +28,26 @@
             </svg>
           </span>
         </label>
-
-          <div class="trigger">
-            <a class="page-link" href="{{ '/' | relative_url }}">Home</a>
-            <a class="page-link" href="{{ '/CONTRIBUTING.html' | relative_url }}">Contributing</a>
-            <div class="nav-dropdown">
-              <a class="page-link" href="{{ '/#tech-stack' | relative_url }}">Tech Stack</a>
-              <div class="dropdown-menu">
-                <a class="dropdown-link" href="{{ '/#frontend-stack' | relative_url }}">Frontend</a>
-                <a class="dropdown-link" href="{{ '/#mobile-stack' | relative_url }}">Mobile</a>
-                <a class="dropdown-link" href="{{ '/#backend-stack' | relative_url }}">Backend &amp; APIs</a>
-                <a class="dropdown-link" href="{{ '/#ai-stack' | relative_url }}">AI Services</a>
-                <a class="dropdown-link" href="{{ '/#data-stack' | relative_url }}">Data &amp; Realtime</a>
-                <a class="dropdown-link" href="{{ '/#infra-stack' | relative_url }}">Infrastructure &amp; DevOps</a>
-                <a class="dropdown-link" href="{{ '/#docker-compose' | relative_url }}">Docker Compose Roadmap</a>
-                <a class="dropdown-link dropdown-overview" href="{{ '/#tech-stack' | relative_url }}">Full overview</a>
-              </div>
+        <div class="trigger">
+          <a class="page-link" href="{{ '/' | relative_url }}">Home</a>
+          <a class="page-link" href="{{ '/CONTRIBUTING.html' | relative_url }}">Contributing</a>
+          <div class="nav-dropdown">
+            <a class="page-link" href="{{ '/tech-stack.html' | relative_url }}">Tech Stack</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-link" href="{{ '/tech-stack.html#frontend-stack' | relative_url }}">Frontend</a>
+              <a class="dropdown-link" href="{{ '/tech-stack.html#mobile-stack' | relative_url }}">Mobile</a>
+              <a class="dropdown-link" href="{{ '/tech-stack.html#backend-stack' | relative_url }}">Backend &amp; APIs</a>
+              <a class="dropdown-link" href="{{ '/tech-stack.html#ai-stack' | relative_url }}">AI Services</a>
+              <a class="dropdown-link" href="{{ '/tech-stack.html#data-stack' | relative_url }}">Data &amp; Realtime</a>
+              <a class="dropdown-link" href="{{ '/tech-stack.html#infra-stack' | relative_url }}">Infrastructure &amp; DevOps</a>
+              <a class="dropdown-link" href="{{ '/tech-stack.html#docker-compose' | relative_url }}">Docker Compose Roadmap</a>
+              <a class="dropdown-link dropdown-overview" href="{{ '/tech-stack.html' | relative_url }}">Full overview</a>
             </div>
-            <a class="page-link" href="{{ '/#getting-started' | relative_url }}">Getting Started</a>
-            <a class="page-link" href="https://github.com/HelloAllyTech" target="_blank">GitHub</a>
           </div>
+          <a class="page-link" href="{{ '/get-started.html' | relative_url }}">Get Started</a>
+          <a class="page-link" href="https://github.com/HelloAllyTech" target="_blank">GitHub</a>
+        </div>
+        <label class="nav-overlay" for="nav-trigger"></label>
       </nav>
     </div>
   </header>
